# class-projects

./: .gitignore  README.md
Euler Problems/: 12.cpp  CMakeLists.txt  LargeNum.cpp  main.cpp
LearnCpp/: CMakeLists.txt  TicTacToe.cpp  TicTacToe.h  main.cpp
OpenCvProjects/FaceRecognition/FaceDetect/: CMakeLists.txt  face_cascade.yml  facedetect.cpp
OpenCvProjects/FaceRecognition/FaceRecognizer/: CMakeLists.txt  FaceRecognizer.cpp  FaceRecognizer.h  FaceRecognizer.hpp  LBPHTrainer.cpp  LBPHTrainer.hpp  main.cpp
OpenCvProjects/FaceRecognition/FaceRecognizer/data/trainingdata/: dir.txt
OpenCvProjects/FaceRecognition/FaceRecognizer/data/trainingdata/faces/: dir.txt
OpenCvProjects/FaceRecognition/FaceRecognizer/output/: DetectedFaces.txt
OpenCvProjects/FaceRecognition/FileFaceDetect/: CMakeLists.txt  filefacedetect.cpp
OpenCvProjects/FaceRecognition/LBPHFaceRecognizer/: CMakeLists.txt  facerec_lbph.cpp
OpenCvProjects/FaceRecognition/LBPHFaceRecognizer/data/: at.txt
OpenCvProjects/FaceRecognition/LBPHTrainer/: CMakeLists.txt  LBPHFaceRecognizer_Trainer.cpp  lbphfaces_at.yml
OpenCvProjects/FaceRecognition/LBPHTrainer/data/: info.txt
OpenCvProjects/ObjectTracker/: CMakeLists.txt  objecttracker.cpp
OpenCvProjects/ProjectManager/: ProjectCompiler.py
